[package]
name = "jsonrpsee-server-utils"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Server utils for jsonrpsee-http crate."
documentation = "https://docs.rs/jsonrpsee-server-utils/"
edition = "2018"
homepage = "https://github.com/paritytech/jsonrpsee"
keywords = ["jsonrpc", "json-rpc", "json", "rpc", "serde"]
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
version = "1.0.0"

[dependencies]
globset = "0.4"
hyper = "0.13.0"
lazy_static = "1.4"
log = "0.4"
unicase = "2.0"
