[package]
name = "jsonrpsee-server"
description = "JSON-RPC server that supports HTTP and WebSocket transports"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
futures-util = { workspace = true, features = ["io", "async-await-macro"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "http2"] }
hyper-util = { workspace = true, features = ["tokio", "service", "tokio", "server-auto"] }
jsonrpsee-core = { workspace = true, features = ["server", "http-helpers"] }
jsonrpsee-types = { workspace = true }
pin-project = { workspace = true }
route-recognizer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
soketto = { workspace = true, features = ["http"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { workspace = true, features = ["compat"] }
tokio-stream = { workspace = true, features = ["sync"] }
tower = { workspace = true, features = ["util"] }
tracing = { workspace = true }

[dev-dependencies]
jsonrpsee-test-utils = { path = "../test-utils" }
socket2 = { workspace = true }
tower = { workspace = true, features = ["timeout"] }
tracing-subscriber = { workspace = true }
