[package]
name = "jsonrpsee-test-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-channel = "0.3.14"
futures-util = "0.3.14"
hyper = { version = "1.0.1", features = ["full"] }
tracing = "0.1.34"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
soketto = { version = "0.7.1", features = ["http"] }
tokio = { version = "1.16", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
