[package]
name = "jsonrpsee-test-utils"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-channel = { workspace = true }
futures-util = { workspace = true, features = ["default"] }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio", "client-legacy"] }
http-body-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive", "alloc"] }
serde_json = { workspace = true }
soketto = { workspace = true, features = ["http"] }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { workspace = true, features = ["compat"] }
