[package]
name = "jsonrpsee-integration-tests"
description = "Integration tests for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow = "1"
beef = { version = "0.5.1", features = ["impl_serde"] }
fast-socks5 = { version = "0.9.1" }
futures = { version = "0.3.14", default-features = false, features = ["std"] }
futures-util = { version = "0.3.14", default-features = false, features = ["alloc"]}
hyper = { version = "0.14", features = ["http1", "client"] }
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
jsonrpsee-test-utils = { path = "../test-utils" }
serde = "1"
serde_json = "1"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"]}
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
pin-project = { version = "1" }
