[package]
name = "jsonrpsee-integration-tests"
description = "Integration tests for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow = "1"
fast-socks5 = { version = "0.9.1" }
futures = { version = "0.3.14", default-features = false, features = ["std"] }
futures-util = { version = "0.3.14", default-features = false, features = ["alloc"]}
http-body-util = "0.1"
hyper = { version = "1.3" }
hyper-util = { version = "0.1.3", features = ["http1", "client", "client-legacy"] }
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
jsonrpsee-test-utils = { path = "../test-utils" }
serde = "1"
serde_json = "1"
tokio = { version = "1.23.1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"]}
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
pin-project = "1"
