[package]
name = "jsonrpsee-integration-tests"
description = "Integration tests for jsonrpsee"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dev-dependencies]
anyhow = { workspace = true }
fast-socks5 = { workspace = true }
futures = { workspace = true, features = ["std"] }
futures-util = { workspace = true, features = ["alloc"]}
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["http1", "client", "client-legacy"] }
jsonrpsee = { path = "../jsonrpsee", features = ["server", "client-core", "http-client", "ws-client", "macros"] }
jsonrpsee-test-utils = { path = "../test-utils" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["compat"]}
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pin-project = { workspace = true }
