[package]
name = "jsonrpsee-utils"
version = "0.2.0-alpha.4"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Utilities for jsonrpsee"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = { version = "1", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
hyper13 = { package = "hyper", version = "0.13", default-features = false, features = ["stream"], optional = true }
hyper14 = { package = "hyper", version = "0.14", default-features = false, features = ["stream"], optional = true }
jsonrpsee-types = { path = "../types", version = "0.2.0-alpha.4", optional = true }
log = { version = "0.4", optional = true }
rustc-hash = { version = "1", optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", features = ["raw_value"], optional = true }

[features]
default = []
hyper_13 = ["hyper13", "futures", "jsonrpsee-types"]
hyper_14 = ["hyper14", "futures", "jsonrpsee-types"]
server = ["anyhow", "futures", "jsonrpsee-types", "rustc-hash", "serde", "serde_json", "log"]

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
