[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
serde_json = "1.0.57"
jsonrpsee-core = { path = "../core", features = ["async-wasm-client", "client"] }
jsonrpsee-client-transport = { path = "../client/transport", features = ["wasm"] }
