[package]
name = "jsonrpsee-ws-server"
version = "0.2.0-alpha.5"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "WebSocket server for JSON-RPC"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.34"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
jsonrpsee-types = { path = "../types", version = "0.2.0-alpha.5" }
jsonrpsee-utils = { path = "../utils", version = "0.2.0-alpha.5", features = ["server"] }
log = "0.4"
parking_lot = "0.11"
rand = "0.8"
rustc-hash = "1.1.0"
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
soketto = "0.4"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.1", features = ["net"] }
tokio-util = { version = "0.6", features = ["compat"] }

[dev-dependencies]
jsonrpsee-test-utils = { path = "../test-utils" }
jsonrpsee-ws-client = { path = "../ws-client" }
