[package]
name = "jsonrpsee-ws-server"
version = "0.14.0"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "WebSocket server for JSON-RPC"
edition = "2021"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-ws-server"

[dependencies]
futures-channel = "0.3.14"
futures-util = { version = "0.3.14", default-features = false, features = ["io", "async-await-macro"] }
jsonrpsee-types = { path = "../types", version = "0.14.0" }
jsonrpsee-core = { path = "../core", version = "0.14.0", features = ["server", "soketto"] }
tracing = "0.1.34"
serde_json = { version = "1", features = ["raw_value"] }
soketto = "0.7.1"
tokio = { version = "1.16", features = ["net", "rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing-futures = "0.2.5"
tokio-stream = "0.1.7"
http = "0.2.7"


[dev-dependencies]
anyhow = "1"
jsonrpsee-test-utils = { path = "../test-utils" }
jsonrpsee = { path = "../jsonrpsee", features = ["full"] }
rand = "0.8"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
