[package]
name = "jsonrpsee-ws"
description = "WebSockets client and server for jsonrpsee"
version = "1.0.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
async-std = "1.2.0"
bytes = "0.4"
err-derive = "0.1.5"
fnv = "1.0"
futures = "0.3.1"
futures-timer = "2.0.2"
jsonrpsee-core = { path = "../core" }
lazy_static = "1.4.0"
log = "0.4"
pin-utils = "0.1.0-alpha.4"
serde = { version = "1.0.40", features = ["derive"] }
serde_json = "1.0.40"
soketto = "0.3.1"
# todo: add TLS feature for these?
webpki = "0.21"
async-tls = "0.6"
pin-project = "0.4.6"
