[package]
name = "jsonrpsee-core-client"
version = "0.6.1"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "JSON-RPC async core client "
edition = "2018"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-ws-client"

[dependencies]
jsonrpsee-types = { path = "../../types", version = "0.6.1" }
jsonrpsee-client-transport = { path = "../transport", version = "0.6.1", features = ["ws"] }
futures-channel = { version = "0.3.14", default-features = false, features = ["std"] }
futures-util = { version = "0.3.14", default-features = false }
tokio = { version = "1", features = ["rt", "sync"] }
serde_json = "1"
tracing = "0.1"
rustc-hash = "1"
