[package]
name = "jsonrpsee-client-transport"
description = "JSON-RPC client transports"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
jsonrpsee-core = { workspace = true, features = ["client"] }
tracing = "0.1.34"

# optional
thiserror = { version = "1", optional = true }
futures-channel = { version = "0.3.14", default-features = false, optional = true }
futures-util = { version = "0.3.14", default-features = false, features = ["alloc"], optional = true }
http = { version = "0.2", optional = true }
tokio-util = { version = "0.7", features = ["compat"], optional = true }
tokio = { version = "1.16", features = ["net", "time", "macros"], optional = true }
pin-project = { version = "1", optional = true }
url = { version = "2.4.0", optional = true }

# tls
rustls-native-certs = { version = "0.7", optional = true }
webpki-roots = { version = "0.26", optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls-pki-types = { version = "1", optional = true }

# ws
soketto = { version = "0.7.1", optional = true }

# web-sys
gloo-net = { version = "0.5.0", default-features = false, features = ["json", "websocket"], optional = true }

[features]
native-tls = ["rustls-native-certs", "__tls"]
webpki-tls = ["webpki-roots", "__tls"]

# Internal feature to indicate whether TLS is enabled.
# Does nothing on its own.
__tls = ["tokio-rustls", "rustls-pki-types"]

ws = [
    "futures-util",
    "http",
    "tokio",
    "tokio-util",
    "soketto",
    "pin-project",
    "thiserror",
    "url",
]
web = [
    "gloo-net",
    "futures-channel",
    "futures-util",
    "thiserror",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
