[package]
name = "jsonrpsee-wasm-client"
version = "0.16.2"
authors = ["Parity Technologies <admin@parity.io>", "Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "WASM client for JSON-RPC"
edition = "2021"
license = "MIT"
repository = "https://github.com/paritytech/jsonrpsee"
homepage = "https://github.com/paritytech/jsonrpsee"
documentation = "https://docs.rs/jsonrpsee-wasm-client"

[dependencies]
jsonrpsee-types = { path = "../../types", version = "0.16.2" }
jsonrpsee-client-transport = { path = "../transport", version = "0.16.2", features = ["web"] }
jsonrpsee-core = { path = "../../core", version = "0.16.2", features = ["async-wasm-client"] }
