[package]
name = "jsonrpsee-wasm-client"
description = "JSON-RPC WASM client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
jsonrpsee-types = { path = "../../types", version = "0.16.2" }
jsonrpsee-client-transport = { path = "../transport", version = "0.16.2", features = ["web"] }
jsonrpsee-core = { path = "../../core", version = "0.16.2", features = ["async-wasm-client"] }
