[package]
name = "jsonrpsee-ws-client"
description = "JSON-RPC websocket client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
jsonrpsee-types = { workspace = true }
jsonrpsee-client-transport = { workspace = true, features = ["ws"] }
jsonrpsee-core = { workspace = true, features = ["async-client"] }
http = "1.0.0"
url = "2.4.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
jsonrpsee-test-utils = { path = "../../test-utils" }
tokio = { version = "1.16", features = ["macros"] }
serde_json = "1"
serde = "1"

[features]
native-tls = ["jsonrpsee-client-transport/native-tls"]
webpki-tls = ["jsonrpsee-client-transport/webpki-tls"]
default = ["native-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
