[package]
name = "jsonrpsee-ws-client"
description = "JSON-RPC websocket client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[dependencies]
http = "1"
jsonrpsee-types = { workspace = true }
jsonrpsee-client-transport = { workspace = true, features = ["ws"], default-features = false }
jsonrpsee-core = { workspace = true, features = ["async-client"] }
url = "2.4.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
jsonrpsee-test-utils = { path = "../../test-utils" }
tokio = { version = "1.23.1", features = ["macros"] }
serde_json = "1"
serde = "1"
rustls = { version = "0.23.7", default-features = false, features = ["logging", "std", "tls12", "ring"] }

[features]
tls = ["jsonrpsee-client-transport/tls"]
tls-rustls-platform-verifier = ["jsonrpsee-client-transport/tls-rustls-platform-verifier"]
default = ["tls-rustls-platform-verifier"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
