[package]
name = "jsonrpsee-ws-client"
description = "JSON-RPC websocket client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
keywords.workspace = true
readme.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
http = { workspace = true }
jsonrpsee-types = { workspace = true }
jsonrpsee-client-transport = { workspace = true, features = ["ws"] }
jsonrpsee-core = { workspace = true, features = ["async-client"] }
url = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
jsonrpsee-test-utils = { path = "../../test-utils" }
tokio = { workspace = true, features = ["macros"] }
serde_json = { workspace = true }
serde = { workspace = true }
rustls = { workspace = true, features = ["logging", "std", "tls12", "ring"] }

[features]
tls = ["jsonrpsee-client-transport/tls"]
tls-rustls-platform-verifier = ["jsonrpsee-client-transport/tls-rustls-platform-verifier", "tls"]
default = ["tls-rustls-platform-verifier"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.playground]
all-features = true
